# protobuf-shareddtor-crash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  foo.cpp  foo.map  main.cpp  onnx.pb.cc
include/: foo.hpp
include/onnx/: onnx.pb.h
